<resources>
    <string name="app_name">SoteriaLogin</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="register">Register</string>
    <string name="register_new_account">Register a new account</string>


    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="terms">Lorem ipsum dolor sit amet, mel purto tincidunt at, admodum philosophia disputationi nec id. Te quo mollis aliquid. Ea utroque senserit est, facete utroque luptatum ex usu. An sea probatus splendide, duo ut soluta postulant evertitur. Pri in noluisse neglegentur, ut dicunt forensibus mei.<br /><br />Ea alterum alienum has, possit placerat efficiendi te ius. Offendit indoctum eum ne. Erat theophrastus vis ad. Agam scriptorem et usu, ne erroribus patrioque eam. Vix et lorem aeque iusto. Mei nulla pertinax conclusionemque eu, hinc iudico definiebas at mei. In mea aeterno definitiones, no liber tacimates nec, consul iisque an nam.  Tamquam epicuri verterem his ea, his verear copiosae invenire at. Et pro utroque prodesset, ut omnis splendide vituperatoribus sit. Eu pri sale semper recteque, vis epicurei delicatissimi et, admodum vivendum at mel. Id eam sonet vidisse sadipscing, id exerci voluptaria sea.<br /><br />Pri eu tempor graeco eruditi, vis eu labores nostrum torquatos, nec nullam audire facilis cu. Id delicata maluisset conceptam pri, quo eu tantas tritani oportere. His iisque antiopam consectetuer an, adhuc corrumpit cum ne. Mel eu nihil essent, eu dolor utamur nusquam mel, sed ei feugait electram consectetuer. Fierent theophrastus conclusionemque sed ex. Ad qui omnium dignissim.<br /><br />Sed placerat insolens platonem et, eam at tota atomorum delicata, adolescens accommodare cum cu. Case fabellas conclusionemque an has, in eruditi scripserit mel, at summo laoreet aliquando pro. Cetero vivendo definiebas cum no, munere adipisci conclusionemque eam no. Eu ullum everti eum, has ea labore veritus offendit. Vis graece mentitum eligendi ne, eu vim alterum pericula. Quo primis pertinacia et, ridens fuisset an pri.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="safety_questions">Safety Questions</string>
    <string name="select_safety_questions">Drag and drop the right questions on the answer box</string>
    <string name="avatars">Avatars</string>
    <string name="select_avatar">Select your avatar</string>
    <string name="continue_operation">Continue</string>
    <string name="register_complete">Registration complete</string>
    <string name="do_login">Your account was created successfully. Please login</string>
    <string name="enjoy_recover_plans">Enjoy our recover plans</string>
    <string name="regulary_updated">Regulary updated</string>
    <string name="discount_50">50% Discount</string>
    <string name="goddess_premium_preservation_plan">Goddess preservation plan</string>
    <string name="talk_with_us">Talk with us</string>
    <string name="talk_with_us_info">If you have any questions talk with us</string>
    <string name="lets_start">Lets\'s start</string>
    <string name="available_plans">Available plans</string>
    <string name="log_out">Logout</string>
    <string name="no_answers">No answers dragged</string>
    <string name="email_confirmation">Email confirmation</string>
    <string name="check_email_confirmation">Check your email for confirmation</string>
    <string name="check_email">Check email</string>
    <string name="recover_password">Recover Password</string>
    <string name="date_birth">Date of Birth</string>
    <string name="please_confirm_date_birth">Please insert your date of birth</string>
    <string name="confirm">Confirm</string>
    <string name="date">Date</string>
    <string name="validation">Validation</string>
    <string name="prove_not_bot">Prove you are not a bot\n 2+2=?</string>
    <string name="solve_the_problem">Solve the problem</string>
    <string name="check_video_tutorial">Check our video tutorial</string>
    <string name="video_tutorial">Video Tutorial</string>
</resources>